main.css
body {
  /* Padding below the footer and lighter body text */
  padding-top: 3rem;
  padding-bottom: 3rem;
  color: #5a5a5a;
  --main-color: #5a5a5a;
  --authors-color: #754487;
  --codereview-color: #b74803;
  --classics-color:  rgb(67, 139, 172);
  --fasttrack-color: rgb(49, 150, 35);
  --tentative-background: repeating-linear-gradient(
    -45deg,
    #fff,
    rgb(235, 235, 235) 10px,
    #fff 10px,
    #eee 20px
  );
}

.legend {
  width: 1em;
  height: 1em;
  display: inline-block;
  line-height: 1em;
}

.legend.main {
  background-color: var(--main-color);
}

.legend.classics {
  background-color: var(--classics-color);
}

.legend.fasttrack {
  background-color: var(--fasttrack-color);
}

.legend.codereview {
  background-color: var(--codereview-color);
}

.legend.authors {
  background-color: var(--authors-color);
}

.legend.tentative {
  background: var(--tentative-background);
}


.legend-event-main{
  color: var(--main-color);
}

.legend-event-classics{
  color: var(--classics-color);
}

.legend-event-fasttrack{
  color: var(--fasttrack-color);
}

.legend-event-codereview{
  color: var(--codereview-color);
}

.legend-event-authors{
  color: var(--authors-color);
}

.legend-event-tentative{
  background: var(--tentative-background);
}


.upcoming-event-list>.tentative {
  background: var(--tentative-background);
}

.upcoming-event-list .title {
  font-weight: bold;
  font-style: italic;
}

.upcoming-event-list .event-main, .upcoming-event-list .event-main a {
  color:  var(--main-color);
}

.upcoming-event-list .event-classics, .upcoming-event-list .event-classics a {
  color:  var(--classics-color);
}

.upcoming-event-list .event-fasttrack, .upcoming-event-list .event-fasttrack a {
  color:  var(--fasttrack-color);
}

.upcoming-event-list .event-codereview, .upcoming-event-list .event-codereview a {
  color:  var(--codereview-color);
}

.upcoming-event-list .event-authors, .upcoming-event-list .event-authors a {
  color:  var(--authors-color);
}

#past-event-list .event-main, #past-event-list .event-main a {
  color:  var(--main-color);
}


.past-event-list>.tentative {
  background: var(--tentative-background);
}

.past-event-list .title {
  font-weight: bold;
}

.past-event-list .event-fasttrack .title {
  color:  var(--fasttrack-color);
}

.past-event-list .event-classics .title {
  color:  var(--classics-color);
}


.past-event-list .event-fasttrack .title {
  color:  var(--fasttrack-color);
}

.past-event-list .event-codereview .title {
  color:  var(--codereview-color);
}

.past-event-list .event-authors .title {
  color:  var(--authors-color);
}

#past-event-list .title {
  font-style: italic;
}

.modal-dialog .modal-header {
  text-align: center;
}

.modal-dialog .modal-header .title {
  line-height: 1.4em;
  /* font-style: italic; */
  font-family: serif;
  font-size: 2em;
  letter-spacing: 0.05em;
  text-transform: uppercase;
}
.modal-dialog .modal-header .title button {
  font-family: sans-serif;
}
.modal-dialog.event-main .modal-header .title {
  color:  var(--main-color);
}

.modal-dialog.event-classics .modal-header .title {
  color:  var(--classics-color);
}

.modal-dialog.event-fasttrack .modal-header .title {
  color:  var(--fasttrack-color);
}

.filter-tools {
  text-align: right;
}

#subject-filter-area {
  min-width: 200px;
  margin-right: 20px;
}

#subject-filter-area, #past-event-list_filter {
  display: inline-block;
}

#subject-filter-area .horizontal-elem {
  display: inline-block;
}

#subject-filter-area select {
  display: inline-block;
}

#get-engaged .row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;
  flex-wrap: wrap;
}

#get-engaged .row > [class*='col-'] {
  display: flex;
}

#events h3 {
  margin-top: 30px;
  margin-bottom: 20px;
}

.person-name .fa-linkedin-square {
  color: #007bff;
  vertical-align: super;
  font-size: 0.9em;

}

a.person-name {
  color: #5a5a5a;
}

main section {
  padding-top: 60px;
}

main section>h2 {
  margin-bottom: 30px;
}

img.profile {
  width: 100px;
  margin: 10px;
}

div.committee {
  align-items: center;
}

div.committee {
  margin-top: 10px;
  margin-bottom: 10px;
}

#steering-committee {
  text-align: center;
}

footer {
  text-align: center;
  color: #fff;
  line-height: 1.1em;
}

footer .floater {
  opacity: 0.7; 
  background: #000;
  padding-top: 2px;
  padding-bottom: 2px;
  /* margin-top:10px; */
}

footer .social-buttons {
  display: inline;
}

section h3 {
  margin-top: 20px;
  margin-bottom: 20px;
}

@media (max-width: 576px) { 
  footer .copyright, footer .back-to-top {
    display: none;
  }
  footer {
    font-size: 0.7em;
  }
}

